[project]
name = "claudews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.2",
    "black>=25.11.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
